--- a/src/app/StaticPages/about-us/about-us.component.html
+++ b/src/app/StaticPages/about-us/about-us.component.html
@@ -523,14 +523,15 @@
         </div><!-- modal-content -->
     </div><!-- modal-dialog -->
 </div><!-- modal -->
+<!--
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<!--Plugin JavaScript file-->
+&lt;!&ndash;Plugin JavaScript file&ndash;&gt;
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;libraries=drawing,weather,geometry,panoramio,places,visualization&amp;key=AIzaSyC4onu-y-_thwzwRNFQKiTzhLgf63dIJo0&amp"></script>
-<!--<script src="js/custom.js"></script>-->
+&lt;!&ndash;<script src="js/custom.js"></script>&ndash;&gt;
 <script type="text/javascript">
     var swiper = new Swiper('.our-history', {
         slidesPerView: 1,
@@ -569,7 +570,7 @@
     });
 </script>
 
-<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;libraries=drawing,weather,geometry,panoramio,places,visualization&amp;key=AIzaSyAiygV7gEuFEGJdxGO_KYvj9_TT-u8w3No"></script>-->
+&lt;!&ndash;<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;libraries=drawing,weather,geometry,panoramio,places,visualization&amp;key=AIzaSyAiygV7gEuFEGJdxGO_KYvj9_TT-u8w3No"></script>&ndash;&gt;
 
 <script type="text/javascript">
 
@@ -615,3 +616,4 @@
 
 </script>
 
+-->
