--- a/src/app/StaticPages/dine-in/dine-in.component.html
+++ b/src/app/StaticPages/dine-in/dine-in.component.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Order from Our Partners - Belly Melly | Online Food Ordering</title>
+<!--    <title>Order from Our Partners - Belly Melly | Online Food Ordering</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-    <!--Plugin CSS file with desired skin-->
+    &lt;!&ndash;Plugin CSS file with desired skin&ndash;&gt;
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
     <!-- <link rel="stylesheet" href="css/home_style.css">-->
 
 
@@ -600,15 +600,15 @@
         </div><!-- modal-content -->
     </div><!-- modal-dialog -->
 </div><!-- modal -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<!--Plugin JavaScript file-->
+&lt;!&ndash;Plugin JavaScript file&ndash;&gt;
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;libraries=drawing,weather,geometry,panoramio,places,visualization&amp;key=AIzaSyC4onu-y-_thwzwRNFQKiTzhLgf63dIJo0&amp"></script>
 
-<!--<script src="js/custom.js"></script>-->
+&lt;!&ndash;<script src="js/custom.js"></script>&ndash;&gt;
 <script type="text/javascript">
     var swiper = new Swiper('.swiper-container', {
         slidesPerView: 1,
@@ -643,7 +643,7 @@
     });
 </script>
 
-<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;libraries=drawing,weather,geometry,panoramio,places,visualization&amp;key=AIzaSyAiygV7gEuFEGJdxGO_KYvj9_TT-u8w3No"></script>-->
+&lt;!&ndash;<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;libraries=drawing,weather,geometry,panoramio,places,visualization&amp;key=AIzaSyAiygV7gEuFEGJdxGO_KYvj9_TT-u8w3No"></script>&ndash;&gt;
 
 <script type="text/javascript">
 
@@ -687,6 +687,6 @@
         }
     }
 
-</script>
+</script>-->
 </body>
 </html>
