--- a/src/app/StaticPages/join-us/join-us.component.html
+++ b/src/app/StaticPages/join-us/join-us.component.html
@@ -252,9 +252,9 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+  <!--      <div class="row">
             <div class="col-md-12">
-                <!-- Swiper -->
+                &lt;!&ndash; Swiper &ndash;&gt;
                 <swiper class= "testimonial "[config]="config">
 
                     <div class="swiper-wrapper">
@@ -316,14 +316,14 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Add Arrows -->
+                    &lt;!&ndash; Add Arrows &ndash;&gt;
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
 
 
                 </swiper>
             </div>
-        </div>
+        </div>-->
     </div>
 </section>
 <section class="pb-5 bm-n bg-light">
