--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -888,15 +888,15 @@
         </div>
     </div>
 </section>-->
-<section class="py-5 bg-light">
+<!--<section class="py-5 bg-light">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="title col-lg-12 text-center mb-5">
                     Explore Organizations
                 </div>
-                <!-- Swiper -->
-                <swiper [config]="config" class="swiper-container">
+                &lt;!&ndash; Swiper &ndash;&gt;
+               &lt;!&ndash; <swiper [ class="swiper-container">&ndash;&gt;
                     <div class="swiper-wrapper">
                         <div class="swiper-slide"><img src="assets/images/partners/img1.png"></div>
                         <div class="swiper-slide"><img src="assets/images/partners/img2.png"></div>
@@ -904,13 +904,13 @@
                         <div class="swiper-slide"><img src="assets/images/partners/img4.png"></div>
                         <div class="swiper-slide"><img src="assets/images/partners/img5.png"></div>
                     </div>
-                    <!-- Add Pagination -->
+                    &lt;!&ndash; Add Pagination &ndash;&gt;
                     <div class="swiper-pagination"></div>
-                </swiper>
+               &lt;!&ndash; </swiper>&ndash;&gt;
             </div>
         </div>
     </div>
-</section>
+</section>-->
 <section class="py-5">
     <div class="container">
         <div class="row d-flex align-items-center">
