--- a/src/app/restaurent/pages/us-restaurants/us-restaurants.component.scss
+++ b/src/app/restaurent/pages/us-restaurants/us-restaurants.component.scss
@@ -1,15 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap');
-body{
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 400;
-  overflow-x: hidden;
-}
-*{
-	box-sizing: border-box;
-}
-a, a:hover{
-	text-decoration: none;
-}
+
+
 @media (max-width: 767px){
   .mb-xs-0{
     margin-bottom: 0;
@@ -229,36 +219,21 @@ header.masthead h1 {
     color: #f4623a;
   }
 }
-header{
+.navbar{
   position: relative;
+  .header-search, .location-bar{
+    position: relative;
+    min-width: 250px;
+  }
+  .location-bar{
+    a:hover{
+      text-decoration: none;
+    }
+  }
 }
-.header-text{
-  position: relative;
-  z-index: 2;
-}
-.header-video--media, .teaser-video {
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    object-fit: cover;
-}
-video {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: 1;
-    width: 100%;
-}
-.header-search, .location-bar{
-  position: relative;
-  min-width: 250px;
-  // display: none;
-}
-.location-bar a:hover{
-  text-decoration: none;
-}
+
+
+
 #mainNav.navbar-scrolled .header-search,#mainNav.navbar-scrolled .location-bar{
   display: block;
 }
@@ -337,12 +312,12 @@ video {
 .restaurant-list-view .left{
   float: left;
   width: 100px;
-  padding-left: 20px;
+  padding-left: 0px;
 }
 .restaurant-list-view .right{
   float: left;
   width: calc(100% - 100px);
-  padding: 0 36px;
+  padding: 0;
 }
 .card{
   border: none;
@@ -896,23 +871,28 @@ hr.white-line{
         .swiper-wrapper{
           width: 90%;
           margin: 0 auto;
-          @media (max-width: 767px){
-            width: 100%;
-          }
-          .item-img{
-            figure{
-              width: 120px;
-              height: 120px;
-              border-radius: 120px;
-              overflow: hidden;
-              @media (max-width: 767px){
-                width: 85px;
-                height: 85px;
-              }
-              img{
-                max-width: 100%;
+          .swiper-slide{
+            text-align: center;
+            .item-img{
+              figure{
+                width: 120px;
+                height: 120px;
+                border-radius: 120px;
+                overflow: hidden;
+                margin: 0 auto;
+                @media (max-width: 767px){
+                  width: 85px;
+                  height: 85px;
+                }
+                img{
+                  max-width: 100%;
+                }
               }
             }
+          }
+          @media (max-width: 767px){
+            width: 100%;
+            
           }
         }
       }
@@ -969,3 +949,8 @@ hr.white-line{
   .social-icons.linkedin:hover{
     background: #2867B2;
   }
+
+
+
+
+  
