--- a/src/app/restaurent/pages/us-restaurants/us-restaurants.component.html
+++ b/src/app/restaurent/pages/us-restaurants/us-restaurants.component.html
@@ -68,8 +68,8 @@
                 <label for="sizeWeight">Pickup</label>
                 <input type="radio" name="sizeBy" value="dimensions" id="sizeDimensions" [checked]="selectedservicetype == 'Delivery'" (click)="selectService('Delivery')"  />
                 <label for="sizeDimensions">Delivery</label>
-                <input type="radio" name="sizeBy" value="dimensions" id="sizeDimensions1" [checked]="selectedservicetype == 'Curbside'" (click)="selectService('Curbside')"  />
-                <label for="sizeDimensions1">Curbside</label>
+                  <input type="radio" name="sizeBy" value="dimensions" id="sizeDimensions1" [checked]="selectedservicetype == 'Curbside'" (click)="selectService('Curbside')"  />
+                  <label for="sizeDimensions1">Curbside</label>
               </div>
             </div>
             
@@ -82,7 +82,24 @@
           <!-- Swiper -->
           <div class="categories">
             <div class="swiper-wrapper">
-              <div class="swiper-slide">
+              <div class="swiper-slide" *ngFor="let val of FoodTypes;let i=index;">
+                <div class="slide-item">
+                  <div class="item-img">
+                    <figure>
+                      <img  style="cursor: pointer" [src]="val.FoodTypeImg">
+                    </figure>
+                  </div>
+                    <div class="text-center">{{val.Name}}</div>
+                   <!-- <div class="custom-control custom-checkbox" style="margin-top: 10px">
+                        <input type="checkbox" class="custom-control-input" id="{{val.FoodTypeId}}w" (click)="FoodTypeF(val.FoodTypeId,$event.target.checked)" name="example1">
+                        <label class="custom-control-label"  for="{{val.FoodTypeId}}w">{{val.Name}}</label>
+                    </div>-->
+
+
+                    <!--<div class="text-center"><input  type="checkbox"  style="display: block !important;" id="{{val.FoodTypeId}}w" (click)="FoodTypeF(val.FoodTypeId,$event.target.checked)" name="example1">{{val.Name}}</div>-->
+                </div>
+              </div>
+             <!-- <div class="swiper-slide">
                 <div class="slide-item">
                   <div class="item-img">
                     <figure>
@@ -161,17 +178,7 @@
                   </div>
                   <div class="text-center">American</div>
                 </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="slide-item">
-                  <div class="item-img">
-                    <figure>
-                      <img src="https://s3.amazonaws.com/v1.0/images/restlocimg/112_ad2_032520124206.png">
-                    </figure>
-                  </div>
-                  <div class="text-center">American</div>
-                </div>
-              </div>
+              </div>-->
             </div>
             <!-- Add Arrows -->
             <div class="swiper-button-next"></div>
