--- a/src/app/restaurent/pages/us-restaurants/us-restaurants.component.html
+++ b/src/app/restaurent/pages/us-restaurants/us-restaurants.component.html
@@ -75,7 +75,7 @@
             
           </div>
         </div>
-        <div class="col-lg-12 py-3 category-view bg-light">
+        <div class="col-lg-12 py-3 category-view">
           <div class="title d-flex">
             <h6 class="mr-3">Most popular near you </h6> <span class="text-muted">1150 Restaurants</span>
           </div>
@@ -83,7 +83,7 @@
           <div class="categories">
             <div class="swiper-wrapper">
               <div class="swiper-slide" *ngFor="let val of FoodTypes;let i=index;">
-                <div class="slide-item">
+                <div class="slide-item p-3 rounded-lg selected">
                   <div class="item-img">
                     <figure>
                       <img  style="cursor: pointer" [src]="val.FoodTypeImg">
@@ -93,7 +93,7 @@
                    <!-- <div class="custom-control custom-checkbox" style="margin-top: 10px">
                         <input type="checkbox" class="custom-control-input" id="{{val.FoodTypeId}}w" (click)="FoodTypeF(val.FoodTypeId,$event.target.checked)" name="example1">
                         <label class="custom-control-label"  for="{{val.FoodTypeId}}w">{{val.Name}}</label>
-                    </div>-->
+                    </div> -->
 
 
                     <!--<div class="text-center"><input  type="checkbox"  style="display: block !important;" id="{{val.FoodTypeId}}w" (click)="FoodTypeF(val.FoodTypeId,$event.target.checked)" name="example1">{{val.Name}}</div>-->
@@ -520,7 +520,7 @@
 
 
 <!-- The Modal -->
-<div class="modal" id="filtermdl" data-toggle="modal" data-backdrop="static" data-keyboard="false">
+<div class="modal" id="filtermdl" data-toggle="modal">
 <div class="modal-dialog text-dark">
   <div class="modal-content">
 
@@ -545,7 +545,7 @@
                       <label for="sizeDimensionsm1">Curbside</label>
                     </div>
                     <div class="accordion border-top" id="accordionExample">
-                        <div class="card pl-1">
+                        <div class="card">
                           <div class="card-header bg-transparent title" id="headingOne">
                             <h6 class="mb-0">
                               <a href="javascript:void(0)" class="text-dark d-flex justify-content-between align-items-center" type="button"  aria-expanded="true" >
@@ -557,10 +557,102 @@
         
                           <div id="food-type" class="" aria-labelledby="headingOne" data-parent="#accordionExample">
                             <div class="card-body p-0 text-left">
-                              <div class="custom-control custom-checkbox" *ngFor="let val of FoodTypes;let i=index;">
+                              <div class="row no-gutters">
+                                <div class="col-3 text-center mb-2 px-1">
+                                  <div class="slide-item p-3 rounded-lg">
+                                    <div class="item-img">
+                                      <figure class="text-center">
+                                        <img src="https://s3.amazonaws.com/v1.0/images/FoodType/IMG-2.png">
+                                      </figure>
+                                    </div>
+                                    <div class="text-center">Asian</div>
+                                  </div>
+                                </div>
+                                <div class="col-3 text-center mb-2 px-1">
+                                  <div class="slide-item p-3 rounded-lg">
+                                    <div class="item-img">
+                                      <figure class="text-center">
+                                        <img src="https://s3.amazonaws.com/v1.0/images/FoodType/IMG-2.png">
+                                      </figure>
+                                    </div>
+                                    <div class="text-center">Asian</div>
+                                  </div>
+                                </div>
+                                <div class="col-3 text-center mb-2 px-1">
+                                  <div class="slide-item p-3 rounded-lg">
+                                    <div class="item-img">
+                                      <figure class="text-center">
+                                        <img src="https://s3.amazonaws.com/v1.0/images/FoodType/IMG-2.png">
+                                      </figure>
+                                    </div>
+                                    <div class="text-center">Asian</div>
+                                  </div>
+                                </div>
+                                <div class="col-3 text-center mb-2 px-1">
+                                  <div class="slide-item p-3 rounded-lg">
+                                    <div class="item-img">
+                                      <figure class="text-center">
+                                        <img src="https://s3.amazonaws.com/v1.0/images/FoodType/IMG-2.png">
+                                      </figure>
+                                    </div>
+                                    <div class="text-center">Asian</div>
+                                  </div>
+                                </div>
+                                <div class="col-3 text-center mb-2 px-1">
+                                  <div class="slide-item p-3 rounded-lg">
+                                    <div class="item-img">
+                                      <figure class="text-center">
+                                        <img src="https://s3.amazonaws.com/v1.0/images/FoodType/IMG-2.png">
+                                      </figure>
+                                    </div>
+                                    <div class="text-center">Asian</div>
+                                  </div>
+                                </div>
+                                <div class="col-3 text-center mb-2 px-1">
+                                  <div class="slide-item p-3 rounded-lg">
+                                    <div class="item-img">
+                                      <figure class="text-center">
+                                        <img src="https://s3.amazonaws.com/v1.0/images/FoodType/IMG-2.png">
+                                      </figure>
+                                    </div>
+                                    <div class="text-center">Asian</div>
+                                  </div>
+                                </div>
+                                <div class="col-3 text-center mb-2 px-1">
+                                  <div class="slide-item p-3 rounded-lg">
+                                    <div class="item-img">
+                                      <figure class="text-center">
+                                        <img src="https://s3.amazonaws.com/v1.0/images/FoodType/IMG-2.png">
+                                      </figure>
+                                    </div>
+                                    <div class="text-center">Asian</div>
+                                  </div>
+                                </div>
+                                <div class="col-3 text-center mb-2 px-1">
+                                  <div class="slide-item p-3 rounded-lg">
+                                    <div class="item-img">
+                                      <figure class="text-center">
+                                        <img src="https://s3.amazonaws.com/v1.0/images/FoodType/IMG-2.png">
+                                      </figure>
+                                    </div>
+                                    <div class="text-center">Asian</div>
+                                  </div>
+                                </div>
+                                <div class="col-3 text-center mb-2 px-1">
+                                  <div class="slide-item p-3 rounded-lg">
+                                    <div class="item-img">
+                                      <figure class="text-center">
+                                        <img src="https://s3.amazonaws.com/v1.0/images/FoodType/IMG-2.png">
+                                      </figure>
+                                    </div>
+                                    <div class="text-center">Asian</div>
+                                  </div>
+                                </div>
+                              </div>
+                              <!-- <div class="custom-control custom-checkbox" *ngFor="let val of FoodTypes;let i=index;">
                                 <input type="checkbox" class="custom-control-input" id="{{val.FoodTypeId}}m" (click)="FoodTypeF(val.FoodTypeId,$event.target.checked)" name="example1">
                                 <label class="custom-control-label" for="{{val.FoodTypeId}}m">{{val.Name}}</label>
-                              </div>
+                              </div> -->
                             
                             </div>
                          
