--- a/src/app/restaurent/pages/us-restaurants/us-restaurants.component.scss
+++ b/src/app/restaurent/pages/us-restaurants/us-restaurants.component.scss
@@ -862,33 +862,40 @@ hr.white-line{
     .title{
       h6{
         @media (max-width: 767px){
-          font-size: 13px;
+          margin-bottom: 0;
         }
+      }
+      @media (max-width: 767px){
+        flex-direction: column;
       }
     }
     .category-view{
       .categories{
         .swiper-wrapper{
-          width: 90%;
+          width: 100%;
           margin: 0 auto;
           .swiper-slide{
             text-align: center;
-            .item-img{
-              figure{
-                width: 120px;
-                height: 120px;
-                border-radius: 120px;
-                overflow: hidden;
-                margin: 0 auto;
-                @media (max-width: 767px){
-                  width: 85px;
-                  height: 85px;
-                }
-                img{
-                  max-width: 100%;
+            .slide-item{
+              background-color: #f8f9fa;
+              &.selected{
+                background-color: #FE6B61;
+                color: #fff;
+              }
+              .item-img{
+                figure{
+                  margin-bottom: 7px;
+                  img{
+                    max-width: 100%;
+                    height: 50px;
+                    @media (max-width: 767px){
+                      height: 35px;
+                    }
+                  }
                 }
               }
             }
+            
           }
           @media (max-width: 767px){
             width: 100%;
@@ -913,47 +920,93 @@ hr.white-line{
     color: #BCBBBD;
     margin-bottom: 10px;
     display: inline-block;
-  }
-  footer li a:hover{
-    color: #FE6B61;
-    margin-bottom: 10px;
+    &:hover{
+      color: #FE6B61;
+      margin-bottom: 10px;
+    }
+    &.social-icons{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      background: #37393b;
+      height: 30px;
+      width: 30px;
+      border-radius: 30px;
+      &:hover{
+        color: #fff;
+      }
+      &.fb:hover{
+        background: #4267B2;
+      }
+      &.twitter:hover{
+        background: #1DA1F2;
+      }
+      &.linkedin:hover{
+        background: #2867B2;
+      }
+    }
+    
   }
   .swiper-button-next, .swiper-button-prev{
-    color: #FE6B61;
+    color: #fff;
+    top: 0;
+    height: auto;
+    width: auto;
+    display: block;
+    margin: 0;
+    padding: 0;
+    @media (max-width: 767px){
+      top: 18px;
+    }
+  }
+  .swiper-button-prev:after, .swiper-button-next:after{
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    width: 30px;
+    text-transform: none !important;
+    font-variant: initial;
+    background: #FE6B61;
+    border-radius: 30px;
+  }
+  .swiper-button-prev, .swiper-container-rtl .swiper-button-next {
+      left: auto;
+      right: 50px;
   }
   .swiper-pagination-bullet-active{
     background: #FE6B61;
   }
-  .social-icons{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    background: #37393b;
-    height: 30px;
-    width: 30px;
-    border-radius: 30px;
-  }
-  .social-icons:hover{
-    color: #fff;
-  }
-  .social-icons.fb:hover{
-    background: #4267B2;
-  }
-  .social-icons.twitter:hover{
-    background: #1DA1F2;
-  }
-  .social-icons.insta:hover{
-    background: #007bff;
-  }
-  .social-icons.linkedin:hover{
-    background: #2867B2;
-  }
+  
 
 
 [type="checkbox"]
 {
   vertical-align:middle;
 }
-
-  
+#filtermdl{
+  .modal-body{
+    padding: 5px;
+  }
+  .slide-item{
+    background-color: #f8f9fa;
+    &.selected{
+      background-color: #FE6B61;
+      color: #fff;
+    }
+    .item-img{
+      figure{
+        margin-bottom: 7px;
+        img{
+          max-width: 100%;
+          height: 50px;
+          @media (max-width: 767px){
+            height: 35px;
+          }
+        }
+      }
+    }
+  }
+}
